<resources>
    <string name="app_name">FastfoodApp</string>
    <string name="content_description">image</string>
    <string name="title_login">LOGIN</string>
    <string name="et_hint_email_id">Email ID</string>
    <string name="et_hint_password">Password</string>
    <string name="lbl_forgot_password">Forgot Password?</string>
    <string name="btn_lbl_login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register"><u>Register</u></string>
    <string name="create_an_account">CREATE AN ACCOUNT</string>
    <string name="hint_last_name">Last name</string>
    <string name="hint_first_name">First name</string>
    <string name="et_hint_confirm_password">Confirm Password</string>
    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
    <string name="btn_lbl_register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login"><u>Login</u></string>
    <string name="err_msg_enter_first_name">Please enter first name.</string>
    <string name="err_msg_enter_last_name">Please enter last name.</string>
    <string name="err_msg_enter_email">Please enter email.</string>
    <string name="err_msg_enter_password">Please enter password.</string>
    <string name="err_msg_enter_confirm_password">Please enter confirm password.</string>
    <string name="err_msg_password_and_confirm_password_mismatch">Password and confirm password does not match.</string>
    <string name="err_msg_agree_terms_and_condition">Please agree terms and condition.</string>
    <string name="register_successful">Thanks for register</string>
    <string name="please_wait">Please Wait&#8230;</string>
    <string name="err_msg_password_too_short"> Password need at least 6 characters</string>
    <string name="title_forgot_password">FORGOT PASSWORD?</string>
    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
    <string name="btn_lbl_submit">Submit</string>
    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
    <string name="register_success">You are registered successfully</string>
    <string name="title_complete_profile">COMPLETE PROFILE</string>
    <string name="et_hint_mobile_number">Mobile Number</string>
    <string name="rb_lbl_male">MALE</string>
    <string name="rb_lbl_female">FEMALE</string>
    <string name="btn_lbl_save">Save</string>
    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
    <string name="image_selection_failed">Image selection Failed!</string>
    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
    <string name="title_items">Items</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_orders">Orders</string>
    <string name="please_click_back_again_to_exit">Please click back again to exit.</string>
    <string name="action_settings">Settings</string>
    <string name="title_settings">Setting</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_addresses">Addresses</string>
    <string name="btn_lbl_logout">Logout</string>
    <string name="title_edit_profile">EDIT PROFILE</string>
    <string name="action_add_item">Add item</string>
    <string name="title_add_item">ADD item</string>
    <string name="et_hint_item_title">Item Title</string>
    <string name="et_hint_item_price">Item Price (đ)</string>
    <string name="et_hint_item_description">Item Description</string>
    <string name="et_hint_item_quantity">Item Quantity</string>
    <string name="err_msg_select_item_image">Please select item image.</string>
    <string name="err_msg_enter_item_title">Please enter item title.</string>
    <string name="err_msg_enter_item_price">Please enter item price.</string>
    <string name="err_msg_enter_item_description">Please enter item description.</string>
    <string name="err_msg_enter_item_quantity">Please enter item quantity.</string>
    <string name="item_uploaded_success_message">Your item is uploaded successfully.</string>
    <string name="no_items_added_yet">No items added yet!</string>
    <string name="no_dashboard_item_found">No items found!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="item_delete_success_message">Your item is deleted successfully.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_dialog_title">Delete</string>
    <string name="delete_dialog_message">Are you sure you want to delete the item?</string>
    <string name="title_item_details">ITEM DETAILS</string>
    <string name="lbl_item_description">Item Description</string>
    <string name="lbl_item_details_stock_quantity">Stock Quantity</string>
    <string name="btn_lbl_add_to_cart">ADD TO CART</string>
    <string name="success_message_item_added_to_cart">Item is added to your cart.</string>
    <string name="btn_lbl_go_to_cart">GO TO CART</string>
    <string name="title_my_cart">MY CART</string>
    <string name="no_cart_item_found">No item found in cart!</string>
    <string name="lbl_subtotal">Subtotal</string>
    <string name="lbl_shipping_charge">Shipping Charge</string>
    <string name="lbl_total_amount">Total Amount</string>
    <string name="btn_lbl_checkout">Checkout</string>
    <string name="action_cart">My Cart</string>
    <string name="lbl_out_of_stock">OUT OF STOCK</string>
    <string name="msg_item_removed_successfully">Item removed successfully.</string>
    <string name="msg_for_available_stock">Available stock is %1$s!. You can not add more than stock quantity.</string>
    <string name="title_address_list">ADDRESS LIST</string>
    <string name="no_address_found">No Address Found!</string>
    <string name="lbL_add_address">Add Address</string>
    <string name="title_add_address">ADD ADDRESS</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_address">Address</string>
    <string name="hint_zip_code">ZipCode</string>
    <string name="hint_additional_note">Additional note</string>
    <string name="hint_other_details">Other details</string>
    <string name="lbl_home">HOME</string>
    <string name="lbl_office">OFFICE</string>
    <string name="lbl_other">OTHER</string>
    <string name="err_msg_please_enter_full_name">Please enter full name.</string>
    <string name="err_msg_please_enter_phone_number">Please enter phone number.</string>
    <string name="err_msg_please_enter_address">Please enter address.</string>
    <string name="err_msg_please_enter_zip_code">Please enter zip-code.</string>
    <string name="err_msg_please_enter_other_details">Please enter other details.</string>
    <string name="err_your_address_added_successfully">Your address is added successfully.</string>
    <string name="title_edit_address">EDIT ADDRESS</string>
    <string name="btn_lbl_update">UPDATE</string>
    <string name="msg_your_address_updated_successfully">Your address is updated successfully.</string>
    <string name="err_your_address_deleted_successfully">Your address is deleted successfully.</string>
    <string name="title_select_address">SELECT ADDRESS</string>
    <string name="title_checkout">CHECKOUT</string>
    <string name="checkout_lbl_item_items">Item Items</string>
    <string name="checkout_lbl_selected_address">Selected Address</string>
    <string name="checkout_lbl_items_receipt">Items Receipt</string>
    <string name="lbl_payment_mode">Payment Mode</string>
    <string name="lbl_cash_on_delivery">Cash On Delivery</string>
    <string name="btn_lbl_place_order">PLACE ORDER</string>
    <string name="no_orders_placed_yet">No orders placed yet!</string>
    <string name="title_my_order_details">MY ORDER DETAILS</string>
    <string name="order_details_lbl">Order Details</string>
    <string name="order_details_lbl_order_id">Order ID</string>
    <string name="order_details_lbl_order_date">Order Date</string>
    <string name="order_details_lbl_order_status">Order Status</string>
    <string name="order_status_pending">Pending</string>
    <string name="order_details_lbl_shipping_address">Shipping Address</string>
    <string name="order_status_in_process">In Process</string>
    <string name="order_status_delivered">Delivered</string>
    <string name="title_sold_items">Sold Items</string>
    <string name="no_items_sold_out_yet">No items sold out yet!</string>
    <string name="title_sold_item_details">SOLD ITEM DETAILS</string>
    <string name="title_activity_dashboard_admin">DashboardActivityAdmin</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_menu">Menu</string>
    <string name="manageStaff">Manage staff</string>
    <string name="manageTable">Manage table</string>
    <string name="btn_lbl_cancel">CANCEL</string>
    <string name="btn_lbl_accept">ACCEPT</string>
    <string name="btn_lbl_reject">REJECT</string>
    <string name="btn_lbl_delivered">DELIVERED</string>
    <string name="btn_lbl_confirmed">CONFIRMED</string>
    <string name="btn_lbl_return">RETURN</string>
    <string name="order_status_reject">Rejected</string>
    <string name="order_status_cancel">Canceled</string>
    <string name="order_status_confirmed">Confirmed</string>
    <string name="order_status_return">Returned</string>
    <string name="btn_lbl_add">+</string>
    <string name="btn_lbl_reduce">-</string>
    <string name="et_hint_add_quantity">Quantity add</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="lbl_item_details_modify_stock_quantity">Modify Quantity</string>
    <string name="title_complete_profile_item">Edit item</string>
    <string name="item_updated_success_message">Item updated successfully</string>
    <string name="title_employee_manager">Employee Manager</string>
    <string name="employee_list_is_empty">Employee list is empty!</string>
    <string name="action_add_employee">Add employee</string>
    <string name="title_add_edit_employee">ADD employee</string>
    <string name="et_hint_employee_name">Employee Name</string>
    <string name="et_hint_employee_phoneNum">Phone Number</string>
    <string name="et_hint_employee_email">Email</string>
    <string name="et_hint_employee_address">Address</string>
    <string name="title_edit_employee_info">EDIT EMPLOYEE INFORMATION</string>
    <string name="err_msg_please_insert_employee_image">Please insert employee image!</string>
    <string name="err_msg_please_enter_employee_name">Please enter employee name!</string>
    <string name="err_msg_please_enter_employee_phone_number">Please enter employee phone number!</string>
    <string name="err_msg_please_enter_employee_email">Please enter employee email!</string>
    <string name="err_msg_please_enter_employee_address">Please enter employee address!</string>
    <string name="employee_info_updated_successfully">Employee information is updated successfully!</string>
    <string name="employee_info_added_successfully">Employee information is added successfully!</string>
    <string name="title_complete_employee_information">Edit Employee</string>
    <string name="delete_employee_dialog_message">Are you sure you want to delete this employee?</string>
    <string name="employee_delete_success_message">Your employee is deleted successfully.</string>
    <string name="title_employee_information">ITEM INFORMATION</string>
    <string name="title_employee_details">EMPLOYEE DETAILS</string>
</resources>