<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activitis.ItemDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_item_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_item_details"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_item_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/fl_item_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/add_item_header_image_height"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/iv_item_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorImageViewBackground"
                    android:contentDescription="@string/content_description"
                    android:scaleType="fitXY" />

                <ImageView
                    android:id="@+id/iv_update_item_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|bottom"
                    android:contentDescription="@string/content_description"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/add_update_item_icon_padding"
                    android:src="@drawable/ic_vector_edit"
                    android:visibility="gone"
                    tools:visibility="visible"/>
            </FrameLayout>

            <LinearLayout
                android:id="@+id/ll_item_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSecondary"
                android:orientation="vertical"
                android:padding="@dimen/item_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fl_item_detail_image">

                <com.store.ffs.utils.MSPTextViewBold
                    android:id="@+id/tv_item_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/item_details_title_textSize"
                    tools:text="Item Title" />

                <com.store.ffs.utils.MSPTextView
                    android:id="@+id/tv_item_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/item_details_price_textSize"
                    tools:text="$100" />
            </LinearLayout>

            <com.store.ffs.utils.MSPTextViewBold
                android:id="@+id/tv_item_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_details_label_margin"
                android:text="@string/lbl_item_description"
                android:textColor="?android:textColorPrimary"
                android:textSize="@dimen/item_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_item_details_title_price" />

            <com.store.ffs.utils.MSPTextView
                android:id="@+id/tv_item_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_details_label_margin"
                android:layout_marginEnd="@dimen/item_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/item_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_details_label"
                tools:text="This is item details description." />

            <LinearLayout
                android:id="@+id/ll_item_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/item_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_item_details_description">

                <com.store.ffs.utils.MSPTextViewBold
                    android:id="@+id/tv_item_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_item_details_stock_quantity"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/item_details_label_textSize" />

                <com.store.ffs.utils.MSPTextView
                    android:id="@+id/tv_item_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:paddingStart="@dimen/item_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/item_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/item_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/item_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/item_details_stock_quantity_textSize"
                    android:textStyle="bold"
                    tools:text="5" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_item_details_change_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/btn_add_to_cart"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_item_details_quantity"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:visibility="gone"
                tools:visibility="visible" >

                <com.store.ffs.utils.MSPTextViewBold
                    android:id="@+id/tv_item_details_modify_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/item_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_item_details_modify_stock_quantity"
                    android:textColor="?android:textColorPrimary"
                    android:textSize="@dimen/item_details_label_textSize" />

                <com.store.ffs.utils.MSPButton
                    android:id="@+id/btn_add_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/btn_lbl_add" />

                <com.store.ffs.utils.MSPButton
                    android:id="@+id/btn_reduce_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/btn_lbl_reduce" />
            </LinearLayout>

            <com.store.ffs.utils.MSPButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_add_to_cart"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_item_details_change_quantity"
                tools:visibility="visible" />

            <com.store.ffs.utils.MSPButton
                android:id="@+id/btn_go_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_go_to_cart"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/btn_add_to_cart"
                tools:visibility="visible" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
